RTL Remove horizontal Scroll from chrome and IE7 and fix displaying media images in IE7

--- a/public/stylesheets/sass/rtl/application.sass
+++ b/public/stylesheets/sass/rtl/application.sass
@@ -1932,6 +1932,7 @@ body
             display: block
       .figure
         position: relative
+        float: right
         background: #ffffff
         cursor: pointer
         .overlay
